--- a/index.html
+++ b/index.html
@@ -22,32 +22,54 @@
             background-color: aquamarine;
             padding-bottom: 100vh;
          }
-         .holder{
+
+         .holder {
             position: relative;
          }
-         .holder .leftHolder{
+
+         .holder .leftHolder {
             display: block;
             position: absolute;
-            top: 0; left: 10%;
+            top: 0;
+            left: 10%;
             width: 30%;
             height: 300px;
          }
 
-         .holder .leftHolder img{
+         .holder .leftHolder img {
             display: block;
             position: absolute;
-            top: 0; left: 0;
+            top: 0;
+            left: 0;
             width: 100%;
             height: 100%;
          }
-         .innerHolder{
+
+         .innerHolder {
             width: 30%;
             margin-left: 50%;
             /* margin-bottom: 100px; */
             padding-bottom: 100px;
          }
-         .innerHolder img{
+
+         .innerHolder img {
             display: none;
+         }
+
+         .leftHolder .dotHolder {
+            position: absolute;
+            bottom: -50px;
+            width: 100%;
+            display: flex;
+            justify-content: space-around;
+         }
+
+         .dotBtn {
+            width: 50px;
+            background-color: #f1efef;
+            text-align: center;
+            border-radius: 10px;
+            cursor: pointer;
          }
       </style>
    </head>
@@ -63,17 +85,24 @@
          </div>
          <div class="holder">
             <div class="leftHolder">
+               <div class="dotHolder">
+               </div>
             </div>
             <div class="innerHolder">
                <img src="images/accept-payment.jpg" class="leftImg" alt="">
                <div>
                   <h2>No matter what your business, we help it grow</h2>
                   <h4>We understand the needs of businesses across sectors. Whether you run a grocery store in a city or
-                     a pharmacy in a town, trust us to make it big. We understand the needs of businesses across sectors. Whether you run a grocery store in a city or
-                     a pharmacy in a town, trust us to make it big. We understand the needs of businesses across sectors. Whether you run a grocery store in a city or
-                     a pharmacy in a town, trust us to make it big. We understand the needs of businesses across sectors. Whether you run a grocery store in a city or
-                     a pharmacy in a town, trust us to make it big. We understand the needs of businesses across sectors. Whether you run a grocery store in a city or
-                     a pharmacy in a town, trust us to make it big. We understand the needs of businesses across sectors. Whether you run a grocery store in a city or
+                     a pharmacy in a town, trust us to make it big. We understand the needs of businesses across
+                     sectors. Whether you run a grocery store in a city or
+                     a pharmacy in a town, trust us to make it big. We understand the needs of businesses across
+                     sectors. Whether you run a grocery store in a city or
+                     a pharmacy in a town, trust us to make it big. We understand the needs of businesses across
+                     sectors. Whether you run a grocery store in a city or
+                     a pharmacy in a town, trust us to make it big. We understand the needs of businesses across
+                     sectors. Whether you run a grocery store in a city or
+                     a pharmacy in a town, trust us to make it big. We understand the needs of businesses across
+                     sectors. Whether you run a grocery store in a city or
                      a pharmacy in a town, trust us to make it big. </h4>
                </div>
             </div>
@@ -82,11 +111,16 @@
                <div>
                   <h2>The smarter choice to payment acceptance</h2>
                   <h4>We understand the needs of businesses across sectors. Whether you run a grocery store in a city or
-                     a pharmacy in a town, trust us to make it big. We understand the needs of businesses across sectors. Whether you run a grocery store in a city or
-                     a pharmacy in a town, trust us to make it big. We understand the needs of businesses across sectors. Whether you run a grocery store in a city or
-                     a pharmacy in a town, trust us to make it big. We understand the needs of businesses across sectors. Whether you run a grocery store in a city or
-                     a pharmacy in a town, trust us to make it big. We understand the needs of businesses across sectors. Whether you run a grocery store in a city or
-                     a pharmacy in a town, trust us to make it big. We understand the needs of businesses across sectors. Whether you run a grocery store in a city or
+                     a pharmacy in a town, trust us to make it big. We understand the needs of businesses across
+                     sectors. Whether you run a grocery store in a city or
+                     a pharmacy in a town, trust us to make it big. We understand the needs of businesses across
+                     sectors. Whether you run a grocery store in a city or
+                     a pharmacy in a town, trust us to make it big. We understand the needs of businesses across
+                     sectors. Whether you run a grocery store in a city or
+                     a pharmacy in a town, trust us to make it big. We understand the needs of businesses across
+                     sectors. Whether you run a grocery store in a city or
+                     a pharmacy in a town, trust us to make it big. We understand the needs of businesses across
+                     sectors. Whether you run a grocery store in a city or
                      a pharmacy in a town, trust us to make it big. </h4>
                </div>
             </div>
@@ -95,11 +129,16 @@
                <div>
                   <h2>The perfect match for your credit needs</h2>
                   <h4>We understand the needs of businesses across sectors. Whether you run a grocery store in a city or
-                     a pharmacy in a town, trust us to make it big. We understand the needs of businesses across sectors. Whether you run a grocery store in a city or
-                     a pharmacy in a town, trust us to make it big. We understand the needs of businesses across sectors. Whether you run a grocery store in a city or
-                     a pharmacy in a town, trust us to make it big. We understand the needs of businesses across sectors. Whether you run a grocery store in a city or
-                     a pharmacy in a town, trust us to make it big. We understand the needs of businesses across sectors. Whether you run a grocery store in a city or
-                     a pharmacy in a town, trust us to make it big. We understand the needs of businesses across sectors. Whether you run a grocery store in a city or
+                     a pharmacy in a town, trust us to make it big. We understand the needs of businesses across
+                     sectors. Whether you run a grocery store in a city or
+                     a pharmacy in a town, trust us to make it big. We understand the needs of businesses across
+                     sectors. Whether you run a grocery store in a city or
+                     a pharmacy in a town, trust us to make it big. We understand the needs of businesses across
+                     sectors. Whether you run a grocery store in a city or
+                     a pharmacy in a town, trust us to make it big. We understand the needs of businesses across
+                     sectors. Whether you run a grocery store in a city or
+                     a pharmacy in a town, trust us to make it big. We understand the needs of businesses across
+                     sectors. Whether you run a grocery store in a city or
                      a pharmacy in a town, trust us to make it big. </h4>
                </div>
             </div>
