scroll page down

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
    <body>
       <section class="dummySec">
-         Dummy Section
+         Scroll Page Down
       </section>
       <section></section>
       <section>
