--- a/index.html
+++ b/index.html
@@ -91,55 +91,22 @@
             <div class="innerHolder">
                <img src="images/accept-payment.jpg" class="leftImg" alt="">
                <div>
-                  <h2>No matter what your business, we help it grow</h2>
-                  <h4>We understand the needs of businesses across sectors. Whether you run a grocery store in a city or
-                     a pharmacy in a town, trust us to make it big. We understand the needs of businesses across
-                     sectors. Whether you run a grocery store in a city or
-                     a pharmacy in a town, trust us to make it big. We understand the needs of businesses across
-                     sectors. Whether you run a grocery store in a city or
-                     a pharmacy in a town, trust us to make it big. We understand the needs of businesses across
-                     sectors. Whether you run a grocery store in a city or
-                     a pharmacy in a town, trust us to make it big. We understand the needs of businesses across
-                     sectors. Whether you run a grocery store in a city or
-                     a pharmacy in a town, trust us to make it big. We understand the needs of businesses across
-                     sectors. Whether you run a grocery store in a city or
-                     a pharmacy in a town, trust us to make it big. </h4>
+                  <h2>1 Lorem Ipsum</h2>
+                  <h4>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum </h4>
                </div>
             </div>
             <div class="innerHolder">
                <img src="images/investment-grow.jpg" class="leftImg" alt="">
                <div>
-                  <h2>The smarter choice to payment acceptance</h2>
-                  <h4>We understand the needs of businesses across sectors. Whether you run a grocery store in a city or
-                     a pharmacy in a town, trust us to make it big. We understand the needs of businesses across
-                     sectors. Whether you run a grocery store in a city or
-                     a pharmacy in a town, trust us to make it big. We understand the needs of businesses across
-                     sectors. Whether you run a grocery store in a city or
-                     a pharmacy in a town, trust us to make it big. We understand the needs of businesses across
-                     sectors. Whether you run a grocery store in a city or
-                     a pharmacy in a town, trust us to make it big. We understand the needs of businesses across
-                     sectors. Whether you run a grocery store in a city or
-                     a pharmacy in a town, trust us to make it big. We understand the needs of businesses across
-                     sectors. Whether you run a grocery store in a city or
-                     a pharmacy in a town, trust us to make it big. </h4>
+                  <h2>2 Lorem Ipsum</h2>
+                  <h4>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum </h4>
                </div>
             </div>
             <div class="innerHolder">
                <img src="images/wapp.jpg" class="leftImg" alt="">
                <div>
-                  <h2>The perfect match for your credit needs</h2>
-                  <h4>We understand the needs of businesses across sectors. Whether you run a grocery store in a city or
-                     a pharmacy in a town, trust us to make it big. We understand the needs of businesses across
-                     sectors. Whether you run a grocery store in a city or
-                     a pharmacy in a town, trust us to make it big. We understand the needs of businesses across
-                     sectors. Whether you run a grocery store in a city or
-                     a pharmacy in a town, trust us to make it big. We understand the needs of businesses across
-                     sectors. Whether you run a grocery store in a city or
-                     a pharmacy in a town, trust us to make it big. We understand the needs of businesses across
-                     sectors. Whether you run a grocery store in a city or
-                     a pharmacy in a town, trust us to make it big. We understand the needs of businesses across
-                     sectors. Whether you run a grocery store in a city or
-                     a pharmacy in a town, trust us to make it big. </h4>
+                  <h2>3 Lorem Ipsum</h2>
+                  <h4>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum </h4>
                </div>
             </div>
 
